--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is my first server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Alejandro Bernal Cruz",
   "license": "ISC",
@@ -12,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.7.0",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.3",
+    "nodemon": "^2.0.19"
   }
 }
